tests/valid_programs/variables/var3.duck
fn main() {
    let x: String = "hello";
    std::io::println(x);
    std::io::println(x);
    x = "hello 2";
    std::io::println(x);
}
