tests/errors/keyof/simple_invalid_variant.duck
use std::io::{println};

fn main() {
    let x: keyof { username: String } = .u;
}
